Add desktop stop control
